libs/config/tests/errors/ce7_missing_parent_tree/stdout.ansi
[0m[1m[38;5;9merror[CE7][0m[1m: class's parent is not present[0m
  [0m[36m┌─[0m source.hpp:4:10
  [0m[36m│[0m
[0m[36m4[0m [0m[36m│[0m class b: [0m[31mx1[0m {};
  [0m[36m│[0m          [0m[31m^^[0m [0m[31mnot present in config[0m
  [0m[36m│[0m
  [0m[36m=[0m [33mhelp[0m: add `class x1;` to the config to declare it as external

